package fitnus;

public class Parser {
}
